# mcp-atlassian-extended

./: .env.example  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  fix_inputs.py  fix_inputs_local.py  gemini-extension.json  llms-full.txt  llms.txt  payload.json  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
evaluations/: eval.xml
src/mcp_atlassian_extended/: __init__.py  __main__.py  config.py  exceptions.py
src/mcp_atlassian_extended/clients/: confluence.py  jira.py
src/mcp_atlassian_extended/resources/: acceptance-criteria.md  agile-ceremonies.md  confluence-pages.md  confluence-spaces.md  custom-fields.md  definition-of-done.md  git-jira-integration.md  issue-linking.md  jira-hierarchy.md  jira-labels.md  jira-ticket-writing.md  jira-workflow.md  jql-library.md  sprint-hygiene.md  story-points.md
src/mcp_atlassian_extended/resources/prompts/: close-ticket.md  create-ticket.md  manage-attachments.md  plan-sprint.md  team-availability.md
src/mcp_atlassian_extended/servers/: __init__.py  _helpers.py  confluence_extended.py  jira_agile.py  jira_extended.py  jira_issues.py  prompts.py  resources.py
tests/: conftest.py
tests/unit/: test_config.py  test_confluence_client.py  test_date_resolve.py  test_jira_client.py  test_jira_issues.py  test_prompts.py  test_resources.py  test_tools.py
