[project]
name = "mcp-atlassian-extended"
version = "0.6.7"
description = "Extended MCP tools for Jira and Confluence — attachments, agile boards, sprints, calendars"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "vish288"}]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "jira",
    "confluence",
    "atlassian",
    "llm",
    "ai",
    "ai-agent",
    "claude",
    "agile",
    "sprint",
    "project-management",
    "devops",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.13.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0,<3.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "python-dateutil>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/vish288/mcp-atlassian-extended"
Repository = "https://github.com/vish288/mcp-atlassian-extended"
Issues = "https://github.com/vish288/mcp-atlassian-extended/issues"
Changelog = "https://github.com/vish288/mcp-atlassian-extended/releases"

[project.scripts]
mcp-atlassian-extended = "mcp_atlassian_extended:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_atlassian_extended"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.22.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.coverage.run]
omit = [
    "src/mcp_atlassian_extended/__init__.py",
    "src/mcp_atlassian_extended/__main__.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "S", "C4", "EM", "ISC"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
